--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/styles.css">
-	<script src="js/script.js" defer></script>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Reg Prototype</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="css/styles.css" />
+		<script src="js/script.js" defer></script>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Explore this alternative registration form prototype. Uncover each field dynamically for a personalized, intuitive sign-up journey. Simplify the process, enhance user interaction." />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Scollable reveal inputs Regstration Form Prototype</title>
 	</head>
 	<body>
 		<div class="main-container">
@@ -18,52 +19,48 @@
 					<div class="top-arrow">&#8593;</div>
 					<div class="bottom-arrow">&#8595;</div>
 				</div>
-				<div class="transparency top-transparency">
-				</div>
+				<div class="transparency top-transparency"></div>
 				<div class="visible-container">
 					<div class="input-container current" data-type="name">
 						<label>First Name</label>
-						<input class="input" name="first-name" type="text">
+						<input class="input" name="first-name" type="text" />
 					</div>
 					<div class="input-container" data-type="name">
 						<label>Last Name</label>
-						<input class="input" name="last-name" type="text">
+						<input class="input" name="last-name" type="text" />
 					</div>
 					<div class="input-container" data-type="gender">
 						<label>Gender</label>
-						<input class="input" name="gender" type="text">
+						<input class="input" name="gender" type="text" />
 					</div>
 					<div class="input-container" data-type="email">
 						<label>Email</label>
-						<input class="input" name="email" type="text">
+						<input class="input" name="email" type="text" />
 					</div>
 					<div class="input-container" data-type="phone number">
 						<label>Phone number</label>
-						<input class="input" name="phone" type="text">
+						<input class="input" name="phone" type="text" />
 					</div>
 					<div class="input-container" data-type="address">
 						<label>Address</label>
-						<input class="input" name="address" type="text">
+						<input class="input" name="address" type="text" />
 					</div>
 					<div class="input-container" data-type="name">
 						<label>Username</label>
-						<input class="input" name="username" type="text">
+						<input class="input" name="username" type="text" />
 					</div>
 					<div class="input-container" data-type="password">
 						<label>Password</label>
-						<input class="input" name="password" type="text">
+						<input class="input" name="password" type="text" />
 					</div>
 					<div class="success-message-container">
 						<h2>Thanks for registering with us!</h2>
 					</div>
 				</div>
-				<div class="transparency bottom-transparency">
-				</div>
+				<div class="transparency bottom-transparency"></div>
 			</div>
 			<div class="button-container">
-				<div class="button">
-					Continue
-				</div>
+				<div class="button">Continue</div>
 			</div>
 		</div>
 	</body>
