Remove title on smaller devices

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="main-container">
 			<div class="inner-container">
 				<div class="form-outer-container">
-					<h1>Create your account</h1>
+					<h1 class="text-size-h1">Create your account</h1>
 					<h3>Let’s get started!</h3>
 					<p class="login-switch">Already a member? Log in</p>
 					<div class="form-inner-container">
